--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
@@ -16,9 +16,9 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-bay-material
 	}
-	// bump_NRM.dds - SP04_NRM.dds
-	// emm.dds - SP04_EMM.dds
-	// untitled-1.dds - texture-04.dds
+	// bump_NRM.dds - SC03_NRM.dds
+	// emm.dds - emm3.dds
+	// untitled-1.dds - texture-05.dds
 	scale = 1
 	rescaleFactor = 1
 	bulkheadProfiles = size1, srf
