--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
@@ -16,9 +16,9 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-lab-2
 	}
-	// bump_NRM.dds - SP04_NRM.dds
-	// emm.dds - SP04_EMM.dds
-	// untitled-1.dds - texture-04.dds
+	// bump_NRM.dds - SC01_NRM.dds
+	// emm.dds - emm.dds
+	// untitled-1.dds - texture-05.dds
 	rescaleFactor = 1
 	bulkheadProfiles = size2
 
