--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -16,9 +16,9 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-goo
 	}
-	// bump_NRM.dds - SP04_NRM.dds
-	// emm.dds - SP04_EMM.dds
-	// untitled-1.dds - texture-04.dds
+	// bump_NRM.dds - SC04_NRM.dds
+	// emm.dds - emm4.dds
+	// untitled-1.dds - texture-08.dds
 	scale = 1
 	rescaleFactor = 0.4
 	bulkheadProfiles = srf
