--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -1,7 +1,7 @@
-// en-us.cfg v1.0.0.0
+// en-us.cfg v1.0.2.0
 // Rusty Star Rockets (RSR)
 // created: 21 Aug 2022
-// updated: 
+// updated: 05 Nov 2022
 
 // this file:
 //   CC BY-SA 4.0 by zer0Kerbal
@@ -88,5 +88,38 @@ Localization
 
 		#RSS-rw-250-titl = Rusty Reaction Wheel 2
 		#RSS-rw-250-desc = Expiration date: JAN 2017
+
+	// Parts\Electrical
+		#RSS-elec-reactor-titl = Rusty Reactor R-A7
+		#RSS-elec-reactor-desc = .
+
+		#RSS-elec-solar-panel-titl = RSR Photovoltaic Panels
+		#RSS-elec-solar-panel-desc = .
+
+		#RSS-elec-solar-round-titl = Round Rusty Solar Panel Static
+		#RSS-elec-solar-round-desc = decription needed
+
+		#RSS-elec-solar-stat-titl = Rusty Solar Panel Static
+		#RSS-elec-solar-stat-desc = .
+
+	// Parts\Science
+		#RSS-science-bay-material-titl = RSR Material Bay
+		#RSS-science-bay-material-desc = The research on advenced materials continues, although the best possible material is already known: rusty metal!
+
+		#RSS-science-exp-goo-titl = RSR Mystery Goo™ Containment Unit
+		#RSS-science-exp-goo-desc = If you look inside the goo container, you will actually see a pair of dirty boots, a tunic, a kool thing and some other stuff.
+
+		#RSS-science-exp-rust-titl = Piece of rusty metal
+		#RSS-science-exp-rust-desc = Piece of rusty metal. It is rusty.
+
+		#RSS-science-lab-1-titl = RSR Mobile Processing Lab
+		#RSS-science-lab-1-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
+
+		#RSS-science-lab-2-titl = RSR Mobile Lab X2
+		#RSS-science-lab-2-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
+
+	// Parts\Thermal
+		#RSS-therm-rad-titl = Rusty Radial Radiator
+		#RSS-therm-rad-desc = #autoLOC_500800 // A radially attachable radiator panel to help dissipate heat into space.
 	}
 }
