--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
@@ -17,32 +17,36 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-panel
 	}
 	// BUMP_NRM.dds - SP00_NRM.dds
-	// Untitled-0.dds - texture-00.dds
 	rescaleFactor = 1
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+
 	TechRequired = advElectrics
 	entryCost = 4400
 	cost = 440
 	category = Electrical
 	subcategory = 0
-	title = RSR Photovoltaic Panels
+
+	title = #RSS-elec-solar-panel-titl
 	manufacturer = #RSS-Agency-titl
+	description = #RSS-elec-solar-panel-desc
 	tags = #autoLOC_500384 // array charge e/c elect energ fixed flat generat (light photo power solar static sun volt watt
 
-	description = .
-	attachRules = 0,1,0,0,1
 	mass = 0.025
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
-	maxTemp = 2000 // = 3200
-	bulkheadProfiles = srf
+
+	maxTemp = 2000
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
-
 	
 	MODULE
 	{
