--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-round.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-round.cfg
@@ -17,7 +17,6 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-round
 	}
 	// BUMP_NRM.dds - SP01_NRM.dds
-	// Untitled-0.dds - texture-01.dds
 	scale = 1
 	rescaleFactor = 1.2
 	bulkheadProfiles = srf
@@ -31,9 +30,9 @@ PART
 	category = Electrical
 	subcategory = 0
 
-	title = Round Rusty SolarPanel Static
+	title = #RSS-elec-solar-round-titl
 	manufacturer = #RSS-Agency-titl
-	description = decription needed
+	description = #RSS-elec-solar-round-desc
 	tags = #autoLOC_500384 // array charge e/c elect energ fixed flat generat (light photo power solar static sun volt watt
 
 	mass = 0.0052
