--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
@@ -17,7 +17,6 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-stat
 	}
 	// BUMP_NRM.dds - SP02_NRM.dds
-	// Untitled-0.dds - texture-02.dds
 	scale = 1
 	rescaleFactor = 1.2
 	bulkheadProfiles = srf
@@ -31,9 +30,9 @@ PART
 	category = Electrical
 	subcategory = 0
 
-	title = RustySolarPanelStatic
+	title = #RSS-elec-solar-stat-titl
 	manufacturer = #RSS-Agency-titl
-	description = .
+	description = #RSS-elec-solar-stat-desc
 	tags = #autoLOC_500384 // array charge e/c elect energ fixed flat generat (light photo power solar static sun volt watt
 
 	mass = 0.0055
