--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
@@ -18,7 +18,6 @@ PART
 	}
 	// bump_NRM.dds - SC03_NRM.dds
 	// emm.dds - emm3.dds
-	// untitled-1.dds - texture-07.dds
 	scale = 1
 	rescaleFactor = 1
 	bulkheadProfiles = size1, srf
@@ -34,9 +33,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = RSR Material Bay
+	title = #RSS-science-bay-material-titl
 	manufacturer = #RSS-Agency-titl
-	description = The research on advenced materials continues, although the best possible material is already known: rusty metal!
+	description = #RSS-science-bay-material-desc
 	tags = #autoLOC_500693 //#autoLOC_500693 = bay experiment lab material research
 
 	mass = 0.2
