--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -18,7 +18,6 @@ PART
 	}
 	// bump_NRM.dds - SC04_NRM.dds
 	// emm.dds - emm4.dds
-	// untitled-1.dds - texture-08.dds
 	scale = 1
 	rescaleFactor = 0.4
 	bulkheadProfiles = srf
@@ -34,7 +33,7 @@ PART
 
 	title = RSR Mystery Goo™ Containment Unit
 	manufacturer = #RSS-Agency-titl
-	description = If you look inside the goo container, you will actually see a pair of dirty boots, a tunic, a kool thing and some other stuff.
+	description = #RSS-science-exp-goo-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.05
