--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
@@ -16,7 +16,6 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-rust
 	}
-	// untitled-1.dds - texture-09.dds
 	scale = 1
 	rescaleFactor = 0.99
 	bulkheadProfiles = srf
@@ -30,9 +29,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = Piece of rusty metal
+	title = #RSS-science-exp-rust-titl
 	manufacturer = #RSS-Agency-titl
-	description = Piece of rusty metal.
+	description = #RSS-science-exp-rust-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.005
