--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
@@ -18,7 +18,6 @@ PART
 	}
 	// bump_NRM.dds - SC02_NRM.dds
 	// emm.dds - em2.dds
-	// untitled-1.dds - texture-04.dds
 	rescaleFactor = 1
 	bulkheadProfiles = size2
 
@@ -39,9 +38,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = RSR Mobile Processing Lab 
+	title = #RSS-science-lab-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
+	description = #RSS-science-lab-1-desc
 	tags = #autoLOC_500690 //#autoLOC_500690 = experiment laboratory research science
 
 	mass = 4.25
