--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
@@ -18,7 +18,6 @@ PART
 	}
 	// bump_NRM.dds - SP04_NRM.dds
 	// emm.dds - SP04_EMM.dds
-	// untitled-1.dds - texture-04.dds
 	rescaleFactor = 1.0
 	bulkheadProfiles = srf
 
@@ -31,9 +30,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Rusty Radial Radiator
+	title = #RSS-therm-rad-titl
 	manufacturer = #RSS-Agency-titl
-	description = #autoLOC_500800 // A radially attachable radiator panel to help dissipate heat into space.
+	description = #RSS-therm-rad-desc
 	tags = #autoLOC_500801 // cool fixed heat moderat radiat static temperat therm
 	
 	mass = 0.03
