--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
@@ -97,4 +97,8 @@ PART
 		}
 	}
 
+	DRAG_CUBE
+	{
+		cube = Default, 9.338,0.781,1.26, 9.338,0.7824,1.26, 4.853,0.9948,0.2014, 4.853,0.9948,0.2014, 9.338,0.7718,1.26, 9.338,0.7718,1.26, 0,0,0, 2.5,3.75,2.5
+	}
 }
