--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
@@ -1,4 +1,4 @@
-// .rsr-elec-solar-panelcfg v1.0.0.0
+// rsr-elec-solar-panelcfg v1.0.0.0
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 05 Nov 2022
@@ -59,5 +59,12 @@ PART
 		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
+	}
+
+	DRAG_CUBE
+	{
+		cube = RETRACTED, 0.4585,0.9609,0.1134, 0.4585,0.89,0.1872, 0.1504,0.499,1.023, 0.1504,0.5004,0.5907, 0.2293,0.8702,0.404, 0.2293,0.8711,0.404, -0.07656,-4.172E-07,0, 0.259,0.9861,0.6584
+		cube = EXTENDED_A, 0.4712,0.9425,2.444, 0.4713,0.6786,2.519, 1.089,0.9214,1.014, 1.089,0.8879,0.9629, 0.263,0.7914,0.6935, 0.263,0.7907,0.6901, -1.22,-4.172E-07,0, 2.545,0.9861,0.6584
+		cube = EXTENDED_B, 0.4712,0.9425,2.444, 0.4713,0.6786,2.519, 1.089,0.9214,1.014, 1.089,0.8879,0.9629, 0.263,0.7914,0.6935, 0.263,0.7907,0.6901, -1.22,-4.172E-07,0, 2.545,0.9861,0.6584
 	}
 }
