--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
@@ -61,4 +61,9 @@ PART
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
 	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.02392,0.9376,0.3289, 0.02392,0.9376,0.3289, 0.02392,0.9375,0.3289, 0.02392,0.9375,0.3289, 0.3149,0.9995,0.1003, 0.3149,0.9995,0.2123, 0,0,-0.05629, 0.5624,0.5624,0.1321
+	}
 }
