--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
@@ -64,4 +64,8 @@ PART
 		usageReqMaskExternal = 8
 	}
 
+	DRAG_CUBE
+	{
+		cube = Default, 0.1302,1,0.1477, 0.1302,1,0.1003, 0.01889,1,0.1001, 0.01889,1,0.1001, 0.02924,1,0.09968, 0.02924,1,0.09968, 0.003598,0,0, 0.08748,0.3317,0.3911
+	}
 }
