--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
@@ -126,6 +126,7 @@ PART
 			name = ModuleExperienceManagement
 			costPerKerbal = 0
 	}
+
 	MODULE
 	{
 		name = ModuleColorChanger
@@ -163,11 +164,14 @@ PART
 		}
 	}
 
-
 	MODULE
 	{
 		name = FlagDecal
 		textureQuadName = flag
 	}
 
+	DRAG_CUBE
+	{
+		cube = Default, 17.25,0.9402,1.889, 17.25,0.9402,1.889, 9.082,0.9668,1.852, 9.082,0.967,1.852, 21.27,0.8034,1.523, 21.27,0.8021,1.523, 0,-7.153E-07,0, 3.593,6.098,2.859
+	}
 }
