--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
@@ -71,4 +71,8 @@ PART
 	 		ThermalAnim = radiator_animation
 	}		
 
+	DRAG_CUBE
+	{
+		cube = Default, 0.06587,1,0.09841, 0.06587,0.7315,0.8778, 0.02524,0.824,1.113, 0.02524,0.824,1.113, 1.28,0.9852,0.1003, 1.28,0.9851,0.1003, -0.4019,7.311E-07,-3.2E-14, 0.8038,2.053,0.03047
+	}
 }
