--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -8,7 +8,6 @@
 PART
 {
 	name = rsr-science-exp-goo
-	// RSRgooExperiment
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -56,6 +55,7 @@ PART
         evaDistance = 1.5
 	}
 
+	MODULE
 	{
 		name = ModuleScienceExperiment
 		experimentID = mysteryGoo
