--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts-command.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts-command.cfg
@@ -15,6 +15,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -27,6 +28,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -39,6 +41,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -51,6 +54,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -63,6 +67,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -75,6 +80,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -87,6 +93,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -99,6 +106,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -111,6 +119,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -123,6 +132,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -135,6 +145,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -147,6 +158,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -159,6 +171,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -171,6 +184,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -183,5 +197,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
