--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts-compound.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts-compound.cfg
@@ -16,6 +16,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -28,5 +29,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
