--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts-electrical.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts-electrical.cfg
@@ -15,6 +15,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -27,6 +28,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -39,6 +41,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -51,5 +54,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
