--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts-science.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts-science.cfg
@@ -16,6 +16,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -28,6 +29,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -40,6 +42,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -52,6 +55,7 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
 
@@ -64,5 +68,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
