--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts-thermal.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts-thermal.cfg
@@ -15,5 +15,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
