--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -29,9 +29,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = Comms RSR 1
+	title = #RustyStar-rsr-antenna-direct-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = Use this to "phone home".
+	description = #RustyStar-rsr-antenna-direct-1-desc
 	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
 
 
