--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -32,9 +32,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = RSR-100 Relay Antenna "'Allo 'Allo!"
+	title = #RustyStar-rsr-antenna-relay-100-titl
 	manufacturer = #RSS-Agency-titl
-	description = Dial "K" for Kerbin
+	description = #RustyStar-rsr-antenna-relay-100-desc
 	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.45
