--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -30,9 +30,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = Rusty Antenna Relay X-1
+	title = #RustyStar-rsr-antenna-relay-x1-titl
 	manufacturer = #RSS-Agency-titl
-	description = No signal? Try this beautiful piece of telecomunications technology.
+	description = #RustyStar-rsr-antenna-relay-x1-desc
 	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.25
