--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -29,9 +29,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Rusty Klaw
+	title = #RustyStar-RustyKlaw-titl
 	manufacturer = #RSS-Agency-titl
-	description = .
+	description = #RustyStar-RustyKlaw-desc
 	tags = #autoLOC_500863 //#autoLOC_500863 = a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
 
 	mass = 0.075
