--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -18,34 +18,34 @@ Localization
 	
 // 0.8.99.1
 	// RustyStarRockets\Parts\Antenna
-		#RustyStar-rsr-antenna-direct-1-titl = Comms RSR 1
-		#RustyStar-rsr-antenna-direct-1-desc = Use this to "phone home".
+		#RSR-antenna-direct-1-titl = Comms RSR 1
+		#RSR-antenna-direct-1-desc = Use this to "phone home".
 
-		#RustyStar-rsr-antenna-relay-100-titl = RSR-100 Relay Antenna "'Allo 'Allo!"
-		#RustyStar-rsr-antenna-relay-100-desc = Dial "K" for Kerbin
+		#RSR-antenna-relay-100-titl = RSR-100 Relay Antenna "'Allo 'Allo!"
+		#RSR-antenna-relay-100-desc = Dial "K" for Kerbin
 
-		#RustyStar-rsr-antenna-relay-x0-titl = untitled-1
-		#RustyStar-rsr-antenna-relay-x0-desc = No signal? Try this beautiful piece of telecomunications technology.
+		#RSR-antenna-relay-x0-titl = untitled-1
+		#RSR-antenna-relay-x0-desc = No signal? Try this beautiful piece of telecomunications technology.
 
-		#RustyStar-rsr-antenna-relay-x1-titl = Rusty Antenna Relay X-1
-		#RustyStar-rsr-antenna-relay-x1-desc = No signal? Try this beautiful piece of telecomunications technology.
+		#RSR-antenna-relay-x1-titl = Rusty Antenna Relay X-1
+		#RSR-antenna-relay-x1-desc = No signal? Try this beautiful piece of telecomunications technology.
 
 	// RustyStarRockets\Parts\Misc
-		#RustyStar-rsr-engine-alien-titl = Alien Engine
-		#RustyStar-rsr-engine-alien-desc = 
+		#RSR-engine-alien-titl = Alien Engine
+		#RSR-engine-alien-desc = 
 
-		#RustyStar-rsr-objectX-titl = ObjectX
-		#RustyStar-rsr-objectX-desc = .
+		#RSR-objectX-titl = ObjectX
+		#RSR-objectX-desc = .
 
-		#RustyStar-rsr-StrangeDebris-titl = StrangeDebris
-		#RustyStar-rsr-StrangeDebris-desc = .
+		#RSR-StrangeDebris-titl = StrangeDebris
+		#RSR-StrangeDebris-desc = .
 
 	// RustyStarRockets\Parts\Utility
-		#RustyStar-rsr-crew-cabin-250-titl = RSR Hitchhiker Storage Container
-		#RustyStar-rsr-crew-cabin-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
+		#RSR-crew-cabin-250-titl = RSR Hitchhiker Storage Container
+		#RSR-crew-cabin-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
 
-		#RustyStar-rsr-crew-cabin-radial-250-titl = RSR Radial Crew Container
-		#RustyStar-rsr-crew-cabin-radial-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
+		#RSR-crew-cabin-radial-250-titl = RSR Radial Crew Container
+		#RSR-crew-cabin-radial-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
 
 		#RustyStar-RustyKlaw-titl = Rusty Klaw
 		#RustyStar-RustyKlaw-desc = .
