--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -1,4 +1,4 @@
-	description = #RustyStar-rsr-engine-alien-desc
+	description = #RSR-engine-alien-desc
 //  rsr-engine-alien.cfg v1.9.0.0
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
@@ -29,7 +29,7 @@ PART
 	category = none
 	subcategory = 0
 
-	title = #RustyStar-rsr-engine-alien-titl
+	title = #RSR-engine-alien-titl
 	manufacturer = X
 
 	mass = 1.75
