--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
@@ -31,9 +31,9 @@ PART
 	category = none
 	subcategory = 0
 
-	title = #RustyStar-rsr-objectX-titl
+	title = #RSR-objectX-titl
 	manufacturer = X
-	description = #RustyStar-rsr-objectX-desc
+	description = #RSR-objectX-desc
 
 	mass = 10.25
 
