--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
@@ -32,9 +32,9 @@ PART
 	category = none
 	subcategory = 0
 
-	title = #RustyStar-rsr-StrangeDebris-titl
+	title = #RSR-StrangeDebris-titl
 	manufacturer = X
-	description = #RustyStar-rsr-StrangeDebris-desc
+	description = #RSR-StrangeDebris-desc
 
 	mass = 1.05
 
