--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -37,9 +37,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RustyStar-rsr-crew-cabin-250-titl
+	title = #RSR-crew-cabin-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RustyStar-rsr-crew-cabin-250-desc
+	description = #RSR-crew-cabin-250-desc
 	tags = #autoLOC_500297 //#autoLOC_500297 = base cabin (can outpost passenger statio tour tuna
 
 	mass = 2.3
