--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -10,8 +10,8 @@ PART
 	name = RustyKlaw
 	module = Part
 	author = Squad
-	mesh = model.mu
 
+	// mesh = model.mu
 	MODEL
 	{
 		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw
