--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -24,7 +24,7 @@ Localization
 		#RSR-antenna-relay-100-titl = RSR-100 Relay Antenna "'Allo 'Allo!"
 		#RSR-antenna-relay-100-desc = Dial "K" for Kerbin
 
-		#RSR-antenna-relay-x0-titl = untitled-1
+		#RSR-antenna-relay-x0-titl = Rusty Antenna Relay X-0
 		#RSR-antenna-relay-x0-desc = No signal? Try this beautiful piece of telecomunications technology.
 
 		#RSR-antenna-relay-x1-titl = Rusty Antenna Relay X-1
