--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -14,7 +14,7 @@ PART
 
 	MODEL
 	{
-		model = RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1
+		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-x1
 	}
 	scale = 1
 	rescaleFactor = 0.5
@@ -75,6 +75,7 @@ PART
 		extendActionName = #autoLOC_6002398 //#autoLOC_6002398 = Extend <<1>>
 		retractActionName = #autoLOC_6002399 //#autoLOC_6002399 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
+	 	isOneShot = false
 		// destroyOnBreakObject = Sphere001
 	}
 
