--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = Unresearcheable
 	entryCost = 4000
 	cost = 1100
-	category = none
+	category = Utility // none
 	subcategory = 0
 
 	title = #RSR-engine-alien-titl
