--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
@@ -28,7 +28,7 @@ PART
 	TechRequired = Unresearcheable
 	entryCost = 0
 	cost = 0
-	category = none
+	category = Utility // none
 	subcategory = 0
 
 	title = #RSR-objectX-titl
