--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
@@ -29,12 +29,13 @@ PART
 	TechRequired = Unresearcheable
 	entryCost = 0
 	cost = 0
-	category = none
+	category = Utility // none
 	subcategory = 0
 
 	title = #RSR-StrangeDebris-titl
 	manufacturer = X
 	description = #RSR-StrangeDebris-desc
+
 
 	mass = 1.05
 
