--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -7,7 +7,8 @@
 
 PART
 {
-	name = RustyKlaw
+	name = rsr-klaw
+	// RustyKlaw
 	module = Part
 	author = Squad
 
@@ -32,7 +33,7 @@ PART
 	title = #RustyStar-RustyKlaw-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RustyStar-RustyKlaw-desc
-	tags = #autoLOC_500863 //#autoLOC_500863 = a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
+	tags = #autoLOC_500863 // a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
 
 	mass = 0.075
 	fuelCrossFeed = False
@@ -117,11 +118,6 @@ PART
 			targetName = MainSleeveLookTarget
 		}
 	}
-	MODULE
-	{
-		name = FlagDecal
-		textureQuadName = flagTransform
-	}
 		
 	MODULE
 	{
@@ -129,5 +125,4 @@ PART
 		stackableQuantity = 1
 		packedVolume = -1
 	}
-
 }
