--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -59,4 +59,10 @@ PART
 		antennaPower = 100000000000
 		antennaCombinable = True
 	}
+
+
+	DRAG_CUBE
+	{
+		cube = Default, 1.525,0.6562,3.617, 1.525,0.6531,3.603, 4.045,0.458,2.28, 4.047,0.4962,1.408, 1.48,0.6707,3.53, 1.48,0.6705,3.56, -0.0007255,1.297,1.192E-07, 3.55,2.649,3.551
+	}
 }
