--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -238,4 +238,17 @@ PART
 		amount = 50
 		maxAmount = 50
 	}
+
+	// Dimensions: x: 7.62, y: 5.43, z: 7.37
+	// Bounding Box Size: 304650.9 liters
+    MODULE
+    {
+        name = ModuleCargoPart
+        packedVolume = 304651
+    }
+
+	DRAG_CUBE
+	{
+		cube = Default, 18.09,0.7177,3.893, 18.09,0.7176,3.893, 17.08,0.6242,2.956, 17.08,0.5729,4.324, 18,0.7456,3.772, 18,0.7368,3.772, 3.126E-07,-0.4953,1.077E-06, 7.616,5.425,7.373
+	}
 }
