--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
@@ -47,4 +47,17 @@ PART
 	breakingTorque = 500
 
 	maxTemp = 9000 // = 2900	
+
+	// Dimensions: x: 10.00, y: 10.00, z: 10.00
+	// Bounding Box Size: 1000001 liters
+    MODULE
+    {
+        name = ModuleCargoPart
+        packedVolume = 1000001
+    }
+
+	DRAG_CUBE
+	{
+		cube = Default, 78.02,0.6642,5.08, 78.02,0.6642,5.08, 78.02,0.6629,5.08, 78.02,0.6629,5.08, 78.02,0.6642,5.08, 78.02,0.6642,5.08, 0,0,0, 10,10,10
+	}
 }
