--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
@@ -49,4 +49,25 @@ PART
 	breakingTorque = 500
 
 	maxTemp = 9000 // = 2900
+
+	// Dimensions: x: 2.00, y: 2.00, z: 2.00
+	// Bounding Box Size: 8000.008 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 8000
+	}
+
+	// Dimensions: x: 2.00, y: 2.00, z: 2.00
+	// Bounding Box Size: 8000.008 liters
+    MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 8000
+	}	
+
+	DRAG_CUBE
+	{
+		cube = Default, 3.592,0.8017,2.096, 3.592,0.8117,1.078, 3.106,0.9882,0.1035, 3.106,0.9126,2.096, 3.85,0.7606,1.501, 3.85,0.7398,2.096, 0,0,0, 2,2,2
+	}
 }
