--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -136,4 +136,8 @@ PART
 		packedVolumeLimit = 1500
 	}
 
+	DRAG_CUBE
+	{
+		cube = Default, 4.38,0.7831,2.037, 4.38,0.7837,2.037, 5.905,0.907,0.8346, 5.905,0.9069,0.8346, 4.369,0.7784,2.037, 4.369,0.7794,2.037, 0,0,0, 3.891,1.651,3.891
+	}
 }
