--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
@@ -128,4 +128,16 @@ PART
 		name = FlagDecal
 		textureQuadName = flagTransform
 	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 18
+		packedVolumeLimit = 1500
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 7.179,0.8009,1.146, 7.179,0.908,0.8957, 4.657,0.9993,0.09706, 4.657,0.9993,0.09706, 3.463,0.6109,2.017, 3.463,0.6105,2.017, -1.816,-5.4E-14,-1.226E-06, 1.858,1.863,3.882
+	}
 }
