--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -71,13 +71,30 @@ PART
 		isTracking = false
 		// pivotName = Rescalar
 		windResistance = 1		
-		animationName = antenna1_animation
 		extendActionName = #autoLOC_6002398 //#autoLOC_6002398 = Extend <<1>>
 		retractActionName = #autoLOC_6002399 //#autoLOC_6002399 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
 	 	isOneShot = false
 		// destroyOnBreakObject = Sphere001
 	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = antenna1_animation
+		// startEventGUIName = #autoLOC_502058 // Open Doors
+		// endEventGUIName = #autoLOC_502059 // Close Doors
+		// actionGUIName = #autoLOC_502060 // Toggle Doors
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
 
 
 	// MODULE
