--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -123,11 +123,11 @@ PART
 		}
 	}
 
-	MODULE
-	{
-		name = FlagDecal
-		textureQuadName = flagTransform
-	}
+	// MODULE
+	// {
+	// 	name = FlagDecal
+	// 	textureQuadName = flagTransform
+	// }
 
 	MODULE
 	{
