--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -32,7 +32,7 @@ PART
 	title = #RSR-antenna-direct-1-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RSR-antenna-direct-1-desc
-	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
+	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 
 	mass = 0.03
@@ -50,14 +50,26 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = antenna2Animation
-		isOneShot = false
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-		actionGUIName = Toggle Antenna
+		extendActionName = #autoLOC_6002398 //#autoLOC_6002398 = Extend <<1>>
+		retractActionName = #autoLOC_6002399 //#autoLOC_6002399 = Retract <<1>>
+		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
+		// startEventGUIName = #autoLOC_6001338 // Extend
+		// endEventGUIName = #autoLOC_6001339 // Retract
+		// actionGUIName = #autoLOC_6001337 // Toggle Deploy
+	 	isOneShot = false
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 		allowAnimationWhileShielded = False
 	}
-		
-MODULE
+
+
+	MODULE
 	{
 		name = ModuleDataTransmitter
 		antennaType = DIRECT
@@ -69,6 +81,15 @@ MODULE
 		antennaPower = 2000000000
 		antennaCombinable = True
 	}
+
+	// Dimensions: x: 0.26, y: 1.50, z: 0.23
+	// Bounding Box Size: 89.96838 liters
+    MODULE
+    {
+        name = ModuleCargoPart
+		packedVolume = 90
+        stackableQuantity = 6
+    }
 
 	DRAG_CUBE
 	{
