--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -35,7 +35,7 @@ PART
 	title = #RSR-antenna-relay-100-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RSR-antenna-relay-100-desc
-	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
+	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.45
 
@@ -60,6 +60,13 @@ PART
 		antennaCombinable = True
 	}
 
+	// Dimensions: x: 3.55, y: 2.65, z: 3.55
+	// Bounding Box Size: 33395.16 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 33395
+	}
 
 	DRAG_CUBE
 	{
