--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
@@ -33,7 +33,7 @@ PART
 	title = #RSR-antenna-relay-x0-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RSR-antenna-relay-x0-desc
-	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
+	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.05
 	PhysicsSignificance = 1
@@ -51,12 +51,21 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RELAY001_ANIM
-		isOneShot = false
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-		actionGUIName = Toggle Antenna
+		startEventGUIName = #autoLOC_6001338 // Extend
+		endEventGUIName = #autoLOC_6001339 // Retract
+		actionGUIName = #autoLOC_6001337 // Toggle Deploy
+	 	isOneShot = false
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 		allowAnimationWhileShielded = False
 	}
+
 	MODULE
 	{
 		name = ModuleDataTransmitter
@@ -70,6 +79,14 @@ PART
 		antennaCombinable = True
 	}
 
+	// Dimensions: x: 0.47, y: 0.63, z: 0.37
+	// Bounding Box Size: 108.4113 liters
+	MODULE
+	{	
+		name = ModuleCargoPart
+		packedVolume = 108
+		stackableQuantity = 5
+    }
 
 	DRAG_CUBE
 	{
