--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -33,7 +33,7 @@ PART
 	title = #RSR-antenna-relay-x1-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RSR-antenna-relay-x1-desc
-	tags = #autoLOC_500807 //#autoLOC_500807 = aerial antenna deploy direct dish extend fold radio signal transmi
+	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.25
 	PhysicsSignificance = 1
@@ -47,44 +47,14 @@ PART
 
 	maxTemp = 2000
 
-	// MODULE
-	// {
-	// 	name = ModuleAnimateGeneric
-	// 	animationName = 
-	// 	startEventGUIName = #autoLOC_502058 // Open Doors
-	// 	endEventGUIName = #autoLOC_502059 // Close Doors
-	// 	actionGUIName = #autoLOC_502060 // Toggle Doors
-	// 	eventAvailableEditor = True
-	// 	eventAvailableFlight = True
-	// 	eventAvailableEVA = True
-	// 	evaDistance = 10
-	// 	allowDeployLimit = True
-	// 	revClampDirection = False
-	// 	revClampSpeed = True
-	// 	revClampPercent = True
-	// }
-
-	MODULE
-	{
-		name = ModuleDeployableAntenna
-		showStatus = false
-		isTracking = false
-		// pivotName = Rescalar
-		windResistance = 1		
-		extendActionName = #autoLOC_6002398 //#autoLOC_6002398 = Extend <<1>>
-		retractActionName = #autoLOC_6002399 //#autoLOC_6002399 = Retract <<1>>
-		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
-	 	isOneShot = false
-		// destroyOnBreakObject = Sphere001
-	}
-
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = antenna1_animation
-		// startEventGUIName = #autoLOC_502058 // Open Doors
-		// endEventGUIName = #autoLOC_502059 // Close Doors
-		// actionGUIName = #autoLOC_502060 // Toggle Doors
+		startEventGUIName = #autoLOC_6001338 // Extend
+		endEventGUIName = #autoLOC_6001339 // Retract
+		actionGUIName = #autoLOC_6001337 // Toggle Deploy
+	 	isOneShot = false
 		eventAvailableEditor = True
 		eventAvailableFlight = True
 		eventAvailableEVA = True
@@ -93,20 +63,8 @@ PART
 		revClampDirection = False
 		revClampSpeed = True
 		revClampPercent = True
+		allowAnimationWhileShielded = False
 	}
-
-
-
-	// MODULE
-	// {
-	// 	name = ModuleAnimateGeneric
-	// 	animationName = antenna1_animation
-	// 	isOneShot = false
-	// 	startEventGUIName = Extend
-	// 	endEventGUIName = Retract
-	// 	actionGUIName = Toggle Antenna
-	// 	allowAnimationWhileShielded = False
-	// }
 
 	MODULE
 	{
@@ -121,6 +79,13 @@ PART
 		antennaCombinable = True
 	}
 
+	// Dimensions: x: 1.32, y: 1.28, z: 1.32
+	// Bounding Box Size: 2213.205 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2213
+	}
 
 	DRAG_CUBE
 	{
