--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -16,7 +16,12 @@ Localization
 		#RSR-name = Rusty Star Rockets
 		#RSR-tags = rsr rust star
 	
-// 0.8.99.1
+// 0.8.99.2
+
+		#RSS-MAG-ant-strt = Extend Antenna
+		#RSS-MAG-ant-stop = Retract Antenna
+		#RSS-MAG-ant-actn = Antenna Toggle
+
 	// RustyStarRockets\Parts\Antenna
 		#RSR-antenna-direct-1-titl = Comms RSR 1
 		#RSR-antenna-direct-1-desc = Use this to "phone home".
